[tool.poetry]
name = "forgerydetection"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.36.1"
opencv-python = "^4.1.1"
torch = "^1.3.0"
torchvision = "^0.4.1"
joblib = "^0.14.0"
ray = "^0.7.5"
tensorboardX = "^1.9"
tensorflow = "1.14.0" # todo: update to tensorflow 2.0.0 (some bug with the manifest)
tensorboard = "1.14.0"
requests = "^2.22.0"
psutil = "^5.6.3"
setproctitle = "^1.1.10"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
