[tool.poetry]
name = "forgerydetection"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.36.1"
opencv-python = "^4.1.1"
torch = "1.3.0"
torchvision = "0.4.1"
joblib = "^0.14.0"
click = "^7.0"
pytorch-lightning = {git = "https://github.com/williamFalcon/pytorch-lightning.git", branch = "master"}
matplotlib = "^3.1.1"
scikit-learn = "^0.21.3"
numpy = "<1.17.*" #because of tensorboard warnings

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
