[tool.poetry]
name = "forgerydetection"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.35.0"
opencv-python = "^4.1.1"
torch = "1.3.0"
torchvision = "0.4.1"
joblib = "^0.14.0"
click = "^7.0"
pytorch-lightning = "0.5.3.2"
matplotlib = "^3.1.1"
scikit-learn = "^0.20.2"
numpy = "<1.17.*" #because of tensorboard warnings
dlib = "^19.18.0"
gprof2dot = "^2017.9"
torchsummary = "^1.5"
gdown = "^3.8"
python_speech_features = "^0.6.0"
moviepy = "^1.0"
pytube = "^9.5"
librosa = "^0.7.1"
kaggle = "^1.5"
cifar2png = "^0.0.4"
face_recognition = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
